2009-08-13  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Ide.Gui/ProjectOperations.cs:
	* MonoDevelop.Ide.Templates/ProjectDescriptor.cs:
	* MonoDevelop.Ide.Gui.Dialogs/GacReferencePanel.cs:
	* MonoDevelop.Ide.Gui.Dialogs/SelectReferenceDialog.cs:
	* MonoDevelop.Ide.Templates/SingleFileDescriptionTemplate.cs:
	  Use the new AssemblyContext class to query and resolve
	  assemblies.

2009-08-13  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Ide.csproj: Set correct encoding.

2009-08-12  Christian Hergert  <chris@dronelabs.com>

	* MonoDevelop.Ide.Commands/FileCommands.cs: Make sure the open
	file dialog is transient for the main window.

2009-08-11  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.Ide.addin.xml: Try some different Mac keyboard
	  mappings for build and run commands.

2009-08-11  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Ide.Tasks/TaskService.cs: Add ShowErrors method.

	* MonoDevelop.Ide.Gui.Pads.ProjectPad/ProjectFileNodeBuilder.cs:
	  Remove unused usings.

2009-08-11  Lluis Sanchez Gual  <lluis@novell.com>

	* Makefile.am:
	* MonoDevelop.Ide.csproj:
	* MonoDevelop.Ide.Gui\Ide.cs:
	* MonoDevelop.Ide\Services.cs:
	* MonoDevelop.Ide.Tasks\Task.cs:
	* MonoDevelop.Ide.Gui\Document.cs:
	* MonoDevelop.Ide.Tasks\UserTask.cs:
	* MonoDevelop.Ide.Tasks\TaskStore.cs:
	* MonoDevelop.Ide.Tasks\TaskService.cs:
	* MonoDevelop.Ide.Tasks\UserTasksView.cs:
	* MonoDevelop.Ide.Gui\ProjectOperations.cs:
	* MonoDevelop.Ide.Gui.Pads\ErrorListPad.cs:
	* MonoDevelop.Ide.Tasks\CommentTasksView.cs: Reimplemented the
	  task service. It should now be more efficient.

2009-08-10  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Ide.Gui/AbstractPadContent.cs:
	* MonoDevelop.Ide.Gui/AbstractViewContent.cs:
	* MonoDevelop.Ide.Gui/AbstractBaseViewContent.cs: Rewritten.
	  Patch by Viktoria Dudka.

2009-08-10  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Ide.Gui/SdiWorkspaceWindow.cs: Original #D code